# pyfakeuse

./: .gitignore  .myenv  README.md  README.rst  pyproject.toml  setup.py
config/: project.py  python.py  version.py
pyfakeuse/: __init__.py  pyfakeuse.py  static.py
scripts/: install_from_pypi.sh
src/pyfakeuse/: pyfakeuse.py
